modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ServiceWithoutResourceParams.bal
package samples.parser;

service HelloService {

  @Path ("/tweet")
  // Following line is invalid.
  resource tweet {
      int b;
      reply m;
  }
}
